# K-and-R-C

./: .gitignore  K-and-R.sln  K-and-R.vcxproj  K-and-R.vcxproj.filters  README.md
.github/: msbuild.yml
ch01-intro/examples/: symbolic_constants.c  word_count.c
ch01-intro/examples/CelsiusToFahrenheit/: CelsiusToFahrenheit.vcxproj  main.c
ch01-intro/examples/FahrenheitToCelsius/: FahrenheitToCelsius.vcxproj  Main.c  main.c
ch01-intro/examples/HelloWorld/: HelloWorld.vcxproj  MyTemplate.vstemplate
ch01-intro/examples/ReadingLines/: Main.c  ReadingLines.vcxproj  main.c
ch01-intro/examples/SymbolicConstants/: Main.c  SymbolicConstants.vcxproj  main.c
ch01-intro/examples/WordCount/: Main.c  WordCount.vcxproj  main.c
ch01-intro/exercises/: c_to_f.c  c_to_f_func.c  char_freq.c  display_ws.c  f_to_c.c  reverse_c_to_f.c  squash_blanks.c  whitespace.c  word_length.c  word_per_line.c
ch01-intro/exercises/CelsiusToFahrenheit/: CelsiusToFahrenheit.vcxproj  Main.c  main.c
ch01-intro/exercises/CharFreq/: CharFreq.vcxproj  Main.c  main.c
ch01-intro/exercises/ConversionFunction/: ConversionFunction.vcxproj  (+2 more)
ch02-types-operators-and-expressions/exercises/: SqueezeTests.cpp
ch05-pointers-and-arrays/ex5-1/: CMakeLists.txt
ch05-pointers-and-arrays/ex5-3/: CMakeLists.txt
ch05-pointers-and-arrays/ex5-3/include/: str_cat.h
ch05-pointers-and-arrays/ex5-3/src/: CMakeLists.txt  str_cat.c
ch05-pointers-and-arrays/ex5-3/tests/: CMakeLists.txt  tests.c  tests.cpp
ch05-pointers-and-arrays/examples/: CMakeLists.txt  echo.c  find.c  find_with_params.c  sort.c  strcpy.c
(+455 files in other folders)
